syntax = "proto3";

package proto;

message GetOGTagsRequest {
    string alias = 1;
}

message GetOGTagsResponse {
    string title = 1;
    string description = 2;
    string image_url = 3;
}

message GetTwitterTagsRequest {
    string alias = 1;
}

message GetTwitterTagsResponse {
    string title = 1;
    string description = 2;
    string image_url = 3;
}

service MetaTagService {
	  rpc GetOGTags(GetOGTagsRequest) returns (GetOGTagsResponse) {}
	  rpc GetTwitterTags(GetTwitterTagsRequest) returns (GetTwitterTagsResponse) {}
}
